--- a/Advanced Calculus/preamble.tex
+++ b/Advanced Calculus/preamble.tex
@@ -14,6 +14,7 @@
 
 % Page Setup
 \usepackage[letterpaper, tmargin=2cm, rmargin=0.5in, lmargin=0.5in, bmargin=80pt, footskip=.2in]{geometry}
+\usepackage{adjustbox}
 
 % Mathematics
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
