--- a/Advanced Calculus/Rudin.tex
+++ b/Advanced Calculus/Rudin.tex
@@ -2610,44 +2610,89 @@ S\subseteq T \implies S^\circ \subseteq T^\circ\text{ and }\overline{S}\subseteq
 \begin{proof}
 Trivial.
 \end{proof}
+\fbox{\begin{minipage}{39em}
+We now give some notion to let us talk about convergence.
+\end{minipage}}
 \begin{definition}
 \label{2.6.6}
-\textbf{(Definition of Interior Point)} A point $p$ is an interior point of $E$ if $E$ is  a neighborhood of  $p$.
+\textbf{(Definition of Interior Point)} A point $p$ is an interior point of $E$ if
+\begin{equation}
+E\in \mathcal{N}(p)
+\end{equation}
 \end{definition}
-\begin{theorem}
+\begin{definition}
 \label{2.6.7}
-\textbf{(Basic Property of Interior)} We have
+\textbf{(Definition of Limit and Isolated Point)} A point $p \in X$ is a limit point of a subset $E$ of $X$, if every open set containing $p$ contain at least a point not  $p$ in $E$. In symbol, that is
+\begin{equation}
+\forall O\in \mathfrak{O}:p \in O, \exists u\neq p, u \in O\cap E
+\end{equation}
+Notice that $p$ does not have to belong to $E$ so that  $p$ is a limit point of  $E$. A point $p$ is an isolated point of $E$ if $p$ belongs to $E$, but  $p$ is not a limit point.
+\end{definition}
+\fbox{\begin{minipage}{39em}
+An example of limit point not in $E$
+\end{minipage}}
+\begin{theorem}
+\label{2.6.8}
+\textbf{(Interior Contain Exactly All Interior Points)} We have
 \begin{equation}
 E^\circ = \set{p:E\in \mathcal{N}(p)}
 \end{equation}
+which reads: the interior of $E$ is exactly the set of point around which $E$ is neighborhood
 \end{theorem}
 \begin{proof}
 Observe $E\in \mathcal{N}(p)\implies \exists O\in\mathfrak{O}, p\in O\subseteq E$, where $O\subseteq E^\circ$, so we have  $\set{p:E\in \mathcal{N}(p)}\subseteq E^\circ$.\\
 
 Arbitrarily pick $p'$ from $E^\circ$, we see $p' \in E^\circ \subseteq E$, so we have $p'\in \set{p:E\in \mathcal{N}(p)}$. Then we have $E^\circ \subseteq \set{p:E\in \mathcal{N}(p)}$ 
 \end{proof}
-\fbox{\begin{minipage}{39em}
-We now give some notion to let us talk about convergence.
-\end{minipage}}
-\begin{definition}
-\label{2.6.8}
-\textbf{(Definition of Limit and Isolated Point)} A point $p \in X$ is a limit point of a subset $E$ of $X$, if every open set containing $p$ contain at least a point not  $p$ in $E$. In symbol, that is
-\begin{equation}
-p \in O \in \mathfrak{O}\implies \set{p}\subset O\cap E)
-\end{equation}
-Notice that $p$ does not have to belong to $E$ so that  $p$ is a limit point of  $E$. 
-\end{definition}
-\begin{definition}
+\begin{theorem}
 \label{2.6.9}
-\textbf{(Definition of Perfect Set)} A subset $E$ of  $X$ is perfect if  $E$ is closed and every point of  $E$ is a limit point of  $E$.
-\end{definition}
-\begin{definition}
+\textbf{(Closure Contain Exactly All Limit Points of $E$ and Points of $E$)} Let $S(E)$ be the limit point of $E$. We have
+\begin{equation}
+\overline{E}= S(E)\cup  E
+\end{equation}
+\end{theorem}
+\begin{proof}
+Let $p$ be in the set on RHS and not in $E$. \As{$p\not\in \overline{E}$}. Then we have $p \in (\overline{E})^c \in \mathfrak{O}$, so we have $\exists u\neq p, u \in (\overline{E})^c \cap E=\varnothing \tCaC$. Let $p \in \overline{E}\setminus E$. \As{$\exists O\in\mathfrak{O},p \in O,O\cap E=\varnothing$}. Then we see $\overline{E}\subset O^c\in \mathfrak{F}$, since $p \in \overline{E}$ and $p \in O\implies p\not\in O^c\tCaC$
+\end{proof}
+\begin{corollary}
 \label{2.6.10}
-\textbf{(Definition of Dense Set)} A subset $E$ is dense in $X$ if every point of  $X$ is either a point or a limit point of  $E$. 
-\end{definition}
+\begin{equation}
+\overline{E}\setminus E\subseteq S(E)
+\end{equation}
+\end{corollary}
+\begin{lemma}
+\label{2.6.11}
+We have
+\begin{equation}
+\overline{E}=\set{p: \forall M\in \mathcal{N}(p), M\cap E\neq \varnothing}
+\end{equation}
+\end{lemma}
+\begin{proof}
+If $p \in E$, then we can see $p \in M\cap E$. If $p \in \overline{E}\setminus E$, then $p\in S(E)$, so $\forall O:p\in O,O\cap E\neq \varnothing$. Then $M\in \mathcal{N}(p)\implies \exists O, p \in O \subseteq M\implies \varnothing \subset O\cap E\subseteq M\cap E$. We have proved $\overline{E}\subseteq \set{p: \forall M\in \mathcal{N}(p), M\cap E\neq \varnothing}$. We now prove the other side. Let $p\in 
+\set{p: \forall M\in \mathcal{N}(p), M\cap E\neq \varnothing}$. Either $p\in E$ or $p\not\in E$. If $p\in E$, then $p \in \overline{E}$. If $p\not\in E$, observe $p \in O\in \mathfrak{O}\implies p \in O \in \mathcal{N}(p)\implies O\cap E\neq \varnothing$. Because $p\not\in E$, we can deduce $p \in S(E)$ 
+
+\end{proof}
+\begin{theorem}
+\label{2.6.12}
+\textbf{(Property of Limit Points)} Let $S(E)$ be the set of limit points of $E$, we have  
+\begin{equation}
+S(E)=\set{p:p \in \overline{E\setminus \set{p}}}
+\end{equation}
+\end{theorem}
+\begin{proof}
+Let $p \in S(E)$. \As{$p\not\in \overline{E\setminus \set{p}}$}. We have $p \in (\overline{E\setminus \set{p}})^c\in \mathfrak{O}$, so we have $\exists u\neq p, u \in (\overline{E\setminus \set{p}})^c \cap E$. Observe $u\in E\implies u=p\text{ or }u \in E\setminus \set{p}\implies u\in E\setminus \set{p}\subseteq \overline{E\setminus \set{p}}\tCaC$. Let $p \in \overline{E\setminus \set{p}}$. We have $\forall M\in \mathcal{N}(p),M\cap E=M\cap (E\setminus \set{p})\neq \varnothing$. Then we have $\forall O: p \in O, O\cap E\neq \varnothing$, so we have $p\in S(E)$
+\end{proof}
 \fbox{\begin{minipage}{39em}
 It is quite difficult to describe the last axiom of neighborhood function without using symbol: every neighborhood around a point contain a smaller neighborhood such that the big neighborhood is a neighborhood of every point in the smaller neighborhood.
 \end{minipage}}
+\begin{definition}
+\label{2.6.13}
+\textbf{(Definition of Perfect Set)} A subset $E$ of  $X$ is perfect if  $E$ is closed and every point of  $E$ is a limit point of  $E$.
+\end{definition}
+\begin{definition}
+\label{2.6.14}
+\textbf{(Definition of Dense Set)} A subset $E$ is dense in $X$ if $\overline{E}=X$ 
+\end{definition}
 \section{Metric Space}
 \begin{definition}
 \label{2.7.1}
@@ -2667,18 +2712,13 @@ d(x,z)\leq d(x,y)+d(y,z)\text{ (Triangle Inequality) }
 \end{definition}
 \begin{theorem}
 \label{2.7.2}
-\textbf{(Examples of Metric Space)} 
+\textbf{(Norm Induced Metric Space)} Every norm induce a metric space by 
 \begin{equation}
-  \R^n,d(\vecta{x},\vecta{y})=\abso{\vecta{x}-\vecta{y}}
-\end{equation}
-\begin{equation}
-  \R^n,d(\vecta{x},\vecta{y})=\sum \abso{x_i-y_i}
+d(\vecta{x},\vecta{y})=\norm{\vecta{x}-\vecta{y}}
 \end{equation}
 \end{theorem}
 \begin{proof}
-  The first example is an Euclidean space. We notice $\abso{\vecta{x}-\vecta{x}}=0\text{ and }\abso{\vecta{x}-\vecta{y}}=0\implies \sqrt{\sum (x_i-y_i)^2}=0\implies \sum (x_i-y_i)^2=0\implies \forall i, x_i=y_i\implies \vecta{x}=\vecta{y} $. Notice $\abso{\vecta{x}-\vecta{y}}=\sqrt{\sum (x_i-y_i)^2}=\sqrt{\sum (y_i-x_i)^2}=\abso{\vecta{y}-\vecta{x}}$. By norm's axiom, we have $\abso{\vecta{x}-\vecta{z}}\leq \abso{\vecta{x}-\vecta{y}}+\abso{\vecta{y}-\vecta{z}}$.\\
-
-The second example is also an Euclidean space. Notice $\sum \abso{x_i-x_i}=0$. Notice $d(\vecta{x},\vecta{y})=0\implies \sum \abso{x_i-y_i}=0\implies \forall i,\abso{x_i-y_i}=0\implies \forall i,x_i=y_i\implies \vecta{x}=\vecta{y}$. Notice $d(x,y)=\sum \abso{x_i-y_i}=\sum \abso{y_i-x_i}=d(y,x)$ and notice for each  $i$, we have  $\abso{x_i-z_i}\leq \abso{x_i-y_i}+\abso{y_i-z_i}$, since the absolute value function is a norm, so we have $d(x,z)=\sum \abso{x_i-z_i}\leq \sum \abso{x_i-y_i}+\abso{y_i-z_i}=d(x,y)+d(y,z)$
+"Reflexive", positive definiteness are trivially given by axiom of norm. Observe $d(\vecta{x},\vecta{y})=\norm{\vecta{x}-\vecta{y}}=\norm{(-1)(\vecta{y}-\vecta{x})}=(\abso{-1})\norm{\vecta{y}-\vecta{x}}=d(\vecta{y},\vecta{x})$. Observe $d()$
 \end{proof}
 \begin{definition}
 \label{2.7.3}
@@ -2787,15 +2827,8 @@ which further implies the series $\sum_{k=1}^d \abso{x_k}+\abso{y_k}$ does not c
 \chapter{Numerical Sequence and Series}
 \chapter{Vector Analysis}
 \section{Important Inequalities}
-\begin{definition}
-\label{4.1.1}
-\textbf{(Definition of $p$-norm)} On $\C^n$, we say the  $p$-norm is 
-\begin{equation}
-  \norm{\vecta{v}}_p:= (\sum \abso{v_i}^p)^{\frac{1}{p}}
-\end{equation}
-\end{definition}
 \begin{theorem}
-\label{4.1.2}
+\label{4.1.1}
 \textbf{(Young's Inequality)} If $a,b\geq 0$ and $p,q>1$ and  $\frac{1}{p}+\frac{1}{q}=1$, then
 \begin{equation}
 ab\leq \frac{a^p}{p}+\frac{b^q}{q}
@@ -2811,7 +2844,7 @@ ab\leq \frac{a^p}{p}+\frac{b^q}{q}
 The inequality above hold true because  $\exp$ is concave upward, and $\frac{1}{p}+\frac{1}{q}=1$. 
 \end{proof}
 \begin{theorem}
-\label{4.1.3}
+\label{4.1.2}
 \textbf{(Definition of $p$-norm)} Recall in Chapter 1, we define absolute value on $\R$ and  $\C$. With that definition, we have: for all $0<p \in \R$, the definition
 \begin{equation}
   \norm{\vecta{v}}_p:= (\sum \abso{v_i}^p)^{\frac{1}{p}}
@@ -2831,7 +2864,7 @@ Observe
 Nonnegative and positive definiteness is trivial. Triangle Inequality \textit{is left to proved}. 
 \end{proof}
 \begin{theorem}
-\label{4.1.4}
+\label{4.1.3}
 \textbf{(Holder's Inequality in $\C^n$)} Let $\vecta{x},\vecta{y}\in \C^n,\frac{1}{p}+\frac{1}{q}=1$. Define $\vecta{xy}$ by $\vecta{xy}_i=\vecta{x}_i\vecta{y}_i$. We have
 \begin{equation}
 \norm{\vecta{xy}}_1\leq \norm{\vecta{x}}_p\norm{\vecta{y}}_q
@@ -2851,7 +2884,7 @@ Notice because $(\sum \abso{\hat{x}_i}^p)^{\frac{1}{p}}=\norm{\hat{\vecta{x}}}_p
 \end{equation}
 \end{proof}
 \begin{corollary}
-\label{4.1.5}
+\label{4.1.4}
 \textbf{(Minkowskis Inequality in $\C^n$ and $p>1$)} Let $\vecta{x},\vecta{y}\in\C^n$, and let $p\in \R^+\text{ and }p\neq 1$. We have triangle inequality for all supposed $p$-norm
 \begin{equation}
 p>1\implies  \norm{\vecta{x}+\vecta{y}}_p\leq \norm{\vecta{x}}_p+\norm{\vecta{y}}_p
@@ -2880,9 +2913,385 @@ So
 \norm{\vecta{x}+\vecta{y}}_p=\norm{\vecta{x}+\vecta{y}}_p^{p-\frac{p}{q}}\leq \norm{\vecta{x}}_p+\norm{\vecta{y}}_p
 \end{equation}
 \end{proof}
+\begin{definition}
+\label{4.1.5}
+\textbf{(Definition of $p$-norm)} On $\C^n$,\textit{ if and only if $p>1$}, we say the  $p$-norm is 
+\begin{equation}
+  \norm{\vecta{v}}_p:= (\sum \abso{v_i}^p)^{\frac{1}{p}}
+\end{equation}
+\end{definition}
+\section{Definition of Differential-able on Euclidean Space} 
+\begin{definition}
+\textbf{(Little-o Notation)} If we write $o(g(x))=f(x)$, we mean
+\begin{equation}
+\lim_{g(x)\to 0}\frac{f(x)}{g(x)}=0
+\end{equation}
+\end{definition}
+\begin{definition}
+\label{4.2.1}
+\textbf{(Differentiable on $\R$)} We say a real-valued function $f(x)$ on $\R$ is differentiable on $a$ if 
+\begin{equation}
+\exists L\in \R, \lim_{x \to a}\frac{f(x)-f(a)}{x-a}=L
+\end{equation}
+Notice $L$ should be viewed as slope (not a number on real number line), or more abstract, a linear transformation from $\R^1$ to  $\R^1$. 
+\end{definition}
+\begin{definition}
+\label{4.2.2}
+\textbf{(Differentiable on $2$-Euclidean Space)} We say a real-valued function $f(x,y)$ on $2$-Euclidean space is differentiable at $(a,b)$ if there exists a $1\times 2$ real matrix $\vecta{H}_{(a,b)}$ such that 
+\begin{equation}
+ \lim_{(x,y)\to (a,b)}\frac{f(x,y)-f(a,b)-(\vecta{H}_{(a,b)}(x,y)-\vecta{H}_{(a,b)}(a,b))}{\norm{(x-a,y-b)}_2}=0
+\end{equation}
+\end{definition}
+\fbox{\begin{minipage}{39em}
+In lower dimensions, our understanding of tangency is typically represented by tangent lines and planes. For a function mapping from \( \mathbb{R} \rightarrow \mathbb{R} \), we can define a tangent line as \( T(x) = L(x-a) \). For a function mapping from \( \mathbb{R}^2 \rightarrow \mathbb{R} \), we can define a tangent plane as \( T(x,y) = \mathbf{H}_{(a,b)}(x-a,y-b) \). Notice that these tangential representations fundamentally hinge on linear transformations, embodied by the matrix $\begin{bmatrix}
+L
+\end{bmatrix}$
+and the transformation \( \mathbf{H}_{(a,b)} \).\\
+
+Drawing a function from \( \mathbb{R} \rightarrow \mathbb{R} \) is achieved in \( \mathbb{R}^2 \), and a function from \( \mathbb{R}^2 \rightarrow \mathbb{R} \) is depicted in \( \mathbb{R}^3 \). Thus, a function from \( \mathbb{R}^m \rightarrow \mathbb{R}^n \) would be visualized in \( \mathbb{R}^{m+n} \). One might consider representing a function directly in its co-domain as an alternative. However, this method is flawed. To see this, consider how we plot a \( \mathbb{R} \rightarrow \mathbb{R} \) function in \( \mathbb{R}^2 \): if we tried to represent the tangents of such a function directly on its co-domain (the y-axis), it would simply be a continuous set of all numbers, providing no clear information.\\
+
+This realization underscores the fact that the concept of "tangency" is fundamentally grounded in linear transformations. As we ascend into higher dimensions, our ability to visually represent tangents becomes constrained by our dimensional space. For instance, while we can theoretically define tangents in \( \mathbb{R}^4 \), their visual representation remains elusive, unlike the more tangible planes in \( \mathbb{R}^3 \).
+\end{minipage}}
+\begin{definition}
+\label{4.2.3}
+\textbf{(A General Definition of Differentiable of Function from Normed $\R^n$ to  $\R^m$)} Let $\vecta{f}:\R^n\rightarrow \R^m$. We say $\vecta{f}$ is differentiable at $\vecta{a}$ if there exists a linear transformation $\vecta{H}:\R^n\rightarrow \R^m$ such that 
+\begin{equation}
+\lim_{\vecta{x}\to \vecta{a}}\frac{\norm{\vecta{f}(\vecta{x})-\vecta{f}(\vecta{a})-\vecta{H}(\vecta{x}-\vecta{a})}_{\R^m}}{\norm{\vecta{x}-\vecta{a}}_{\R^n}}=0
+\end{equation}
+There is no restriction on which norm to use on $\R^n$ and $\R^m$, but the metric implicitly used in the limit symbol is induced by the norm in denominator. The above equation is written
+ \begin{equation}
+\forall \epsilon, \exists \delta, \forall x,\norm{\vecta{x}-\vecta{a}}_{\R^n}<\delta \longrightarrow \frac{\norm{\vecta{f}(\vecta{x})-\vecta{f}(\vecta{a})-\vecta{H}(\vecta{x}-\vecta{a})}_{\R^m}}{\norm{\vecta{x}-\vecta{a}}_{\R^n}}<\epsilon 
+\end{equation}
+We also say $\vecta{H}$ is a differential or a derivative of $\vecta{f}$ at $\vecta{a}$
+\end{definition}
+\fbox{\begin{minipage}{39em}
+The core concept of differentiable at a point $\vecta{a}$ is that for all desired error, we can linearly approximate (estimate) $\vecta{a}$, and the error we have will be much less than the difference of the input and $\vecta{a}$.\\
 
 
+Notice that from now, if we use the norm notation $\norm{\cdot}$ without specification or use the absolute value notation $\abso{\cdot}$, we mean $2$-norm.The $2$-norm is also called "length". 
+\end{minipage}}\\
 
+\begin{definition}
+\label{4.2.4}
+\textbf{(Jacobian Matrix)} For function $\vecta{f}$ from $\R^n$ to $\R^m$. The Jacobian $\vecta{J}_{\vecta{f}}(\vecta{a})$ of $\vecta{f}$ at $\vecta{a}$ is the matrix
+ \begin{equation}
+   \vecta{J}_{\vecta{f}}(\vecta{a})_{i,j}=\frac{\partial f_i}{\partial x_j}(\vecta{a})
+\end{equation}
+If we write $\vecta{J}$, we mean a matrix-valued function 
+\begin{equation}
+  (D\vecta{f})(\vecta{a}):=\vecta{J}(\vecta{a}):=\vecta{J}_{\vecta{f}}(\vecta{a})
+\end{equation}
+\end{definition}
+\begin{theorem}
+\textbf{(If Differentiable, Then Jacobian is a Differential)}
+\end{theorem}
+\begin{proof}
+  \red{missed}
+\end{proof}
+\begin{theorem}
+\label{4.2.5}
+\textbf{(Example of Differentiable Function)} 
+\begin{equation}
+f(x,y)=x^2+2y\text{ is differentiable every where}
+\end{equation}
+\end{theorem}
+\begin{proof}
+Notice 
+\begin{equation}
+\vecta{J}=\begin{bmatrix}
+  2x&2
+\end{bmatrix}
+\end{equation}
+For each point $(a,b)$, we let $\vecta{H}:=\vecta{J}(a,b)=\begin{bmatrix}
+  2a&2
+\end{bmatrix}$, and we have
+\begin{equation}
+\lim_{\vecta{x}\to \vecta{a}}\frac{f(\vecta{x})-f(\vecta{a})-\vecta{H}(\vecta{x}-\vecta{a})}{\norm{\vecta{x}-\vecta{a}}_{\R^n}}=\lim_{\vecta{x}\to \vecta{a}}\frac{(x-a)^2}{\sqrt{(x-a)^2+(y-b)^2}}
+\end{equation}
+Notice that we have
+\begin{equation}
+\lim_{x\to a}\frac{(x-a)^2}{\sqrt{(x-a)^2} }=0
+\end{equation}
+In $\epsilon,\delta$ language, we have
+\begin{equation}
+\forall \epsilon,\exists \delta, \forall x, \abso{x-a}<\delta \implies \frac{(x-a)^2}{\sqrt{(x-a)^2} }<\epsilon  
+\end{equation}
+For all $\epsilon $, we then can pick the $\delta$ above so we have
+\begin{equation}
+\sqrt{(x-a)^2+(y-b)^2}<\delta \implies \abso{x-a}<\delta\implies \frac{(x-a)^2}{\sqrt{(x-a)^2+(y-b)^2} }\leq  \frac{(x-a)^2}{\sqrt{(x-a)^2} } <\epsilon 
+\end{equation}
+This prove equation 4.40 approach to 0
+\end{proof}
+\begin{theorem}
+\label{4.2.6}
+\textbf{(Example of Differentiable Function)} Let $\vecta{f}:\R^n\rightarrow \R^m$ 
+\begin{equation}
+\text{ If $\vecta{f}$ is linear, then $\vecta{f}$ is differentiable everywhere }
+\end{equation}
+\end{theorem}
+\begin{proof}
+Let $\vecta{H}=\vecta{f}$, then we have 
+\begin{equation}
+  \lim_{\vecta{x}\to \vecta{a}}\frac{\norm{\vecta{f}(\vecta{x})-\vecta{f}(\vecta{a})-\vecta{H}(\vecta{x}-\vecta{a})}}{\norm{\vecta{x}-\vecta{a}}}=\lim_{\vecta{x}\to \vecta{a}}\frac{\norm{\vecta{f}(\vecta{x}-\vecta{a}-(\vecta{x}-\vecta{a}))}}{\norm{\vecta{x}-\vecta{a}}}=\lim_{\vecta{x}\to \vecta{a}}\frac{\norm{\vecta{f}(\vecta{0})}}{\norm{\vecta{x}-\vecta{a}}}=0
+\end{equation}
+\end{proof}
+\begin{theorem}
+\label{4.2.7}
+\textbf{(Example of Jacobian Exists, But Non-Differentiable)} 
+\begin{equation}
+f(x,y)=\begin{cases}
+  \frac{xy}{x^2+y^2}& \text{ if  }(x,y)\neq \vecta{0}\\
+  0& \text{ if  }(x,y)=\vecta{0}
+\end{cases}\text{ exists jacobian but non-differentiable at $\vecta{0}$  }
+\end{equation}
+\end{theorem}
+\begin{proof}
+Notice $\vecta{J}(0,0)=\begin{bmatrix}
+  0&0
+\end{bmatrix}$. Now we prove $f$ is non-differentiable. Observe
+\begin{equation}
+\lim_{(x,y)\to (0,0)}\frac{f(x,y)-f(0,0)-\vecta{H}(0,0)}{\sqrt{x^2+y^2} }=\frac{f(x,y)}{\sqrt{x^2+y^2} }=\frac{xy}{(x^2+y^2)^{\frac{3}{2}}}
+\end{equation}
+We know 
+\begin{equation}
+\lim_{x\to 0}\frac{x^2}{(2x^2)^{\frac{3}{2}}}=\infty
+\end{equation}
+In $\epsilon,\delta$ language, we have
+\begin{equation}
+\forall \epsilon, \exists \delta, x=\delta\implies  \frac{x^2}{(2x^2)^{\frac{3}{2}}}>\epsilon 
+\end{equation}
+Then we have 
+\begin{equation}
+  \forall \epsilon ,\exists \delta, (x,y)=(\frac{\delta}{\sqrt{2}},\frac{\delta}{\sqrt{2}}) \implies \frac{xy}{(x^2+y^2)^{\frac{3}{2}}}=\frac{\delta^2}{2(\delta^2)^{\frac{3}{2}}}>\epsilon 
+\end{equation}
+which prove  equation 4.47 does not approach to 0.
+\end{proof}
+\fbox{\begin{minipage}{39em}
+Thm: If differentialbe, then $\vecta{H}_{\vecta{a}}=\vecta{J}(\vecta{a})$.\\
 
+Example: Let $\delta; (0,1)\rightarrow \R^n, f:\R^n \rightarrow \R$ be differentiable. Let $F(t)=f(\delta(t))$. Verify $F'(t)=(Df)(D\delta)$, where $Df$ is is a $1\times n $ matrix and $D\delta $ is a $n\times 1$ matrix.\\
 
+Example: Let $f(u,v,w)=u^2v+wv^2$ and $g(x,y)=(xy,\sin x, e^x)$. Let  $h=f\circ g$. Find $\frac{\partial  h}{\partial x}$.\\
+
+MVT: Let $f:U\subseteq \R^n\rightarrow \R^m$. Suppose $f$ is differentaible on $U$ and $x,y \in U$. Then $\exists c_1,\dots,c_m \in \R$ on the segment joining $x$ and $y$ such that
+\begin{equation}
+\forall i, f_i(y)-f_i(x)=(Df_i)(c_i)(y-x)
+\end{equation}
+\end{minipage}}
+\begin{theorem}
+\textbf{(Chain Rule)}
+\end{theorem}
+\fbox{\begin{minipage}{39em}
+Given differentiable $\delta:\R \rightarrow \R^n, f:\R^n:\R$. By chain rule, we can observe $F(t):= f\circ \delta (t)$ satisfy $F'=(Df)\circ (D\delta)$, where $Df$ is a $1\times n$ matrix-valued function and $D\delta$ is a $n \times 1$ matrix-valued function.
+\end{minipage}}
+\begin{theorem}
+\textbf{(Example of Chain Rule)} Let $f(u,v,w)=u^2v+wv^2$ and $\vecta{g}(x,y)=(xy,\sin x,e^x)$. Let $h=f\circ \vecta{g}$. We have
+\begin{equation}
+\frac{\partial h}{\partial x}=2xy^2\sin x+(x^2y^2+2e^x\sin x) \cos x+ e^x\sin^2 x
+\end{equation}
+\end{theorem}
+\begin{proof}
+We have
+\begin{align}
+  \frac{\partial h}{\partial x}&=\frac{\partial h}{\partial u}\frac{\partial u}{\partial x}+\frac{\partial h}{\partial v}\frac{\partial v}{\partial x}+\frac{\partial h}{\partial w}\frac{\partial w}{\partial x}\\
+  &=(2uv)(y)+(u^2+2wv)(\cos x)+(v^2)(e^x)\\
+  &=2xy(\sin x)y+(x^2y^2+2e^x \sin x)\cos x+(\sin^2 x)e^x\\
+  &=2xy^2\sin x+(x^2y^2+2e^x\sin x) \cos x+ e^x\sin^2 x
+\end{align}
+\end{proof}
+\begin{theorem}
+\textbf{(Mean Value Theorem)} Let $\vecta{f}:U\subseteq \R^n\rightarrow \R^m$. Suppose $\vecta{f}$ is differentiable on $U$ and $\vecta{x},\vecta{y}\in U$. For all $i\in \set{1,\dots , n}$, there exists $0\leq c_i\leq 1$ such that 
+\begin{equation}
+f_i(\vecta{y})-f_i(\vecta{x})=(Df_i)(\vecta{x}+c_i(\vecta{y}-\vecta{x}))
+\end{equation}
+\end{theorem}
+\chapter{Advanced Calculus HW}
+\section{HW1}
+\begin{question}{}{}
+\begin{enumerate}
+    \item Prove that the following statements are equivalent: for a given sequence $\{x_n\}$,
+    \begin{enumerate}
+        \item for every $0 < \epsilon \in \mathbb{Q}$, there exists $N \in \mathbb{N}$ such that $|x_n - x| < \epsilon$ whenever $n \geq N$.
+        \item for every $0 < \epsilon \in \mathbb{R}$, there exists $N \in \mathbb{N}$ such that $|x_n - x| < \epsilon$ whenever $n \geq N$.
+    \end{enumerate}
+\end{enumerate}
+\end{question}
+\begin{proof}
+From $(b)$ to $(a)$, just observe  $\Q \subseteq \R$ and we are done.Now we prove from $(a)$ to $(b)$.\\
+
+Because $\Q$ is dense in  $\R$,  for all $\epsilon \in \R^+$, we can pick $\epsilon' \in \Q$ such that $0<\epsilon '< \epsilon $. By $(a)$,  we know there exists $N\in \N$ such that $\abso{x_n-x}<\epsilon ' <\epsilon $ whenever $n\geq N$. This finish the proof.
+\end{proof}
+\begin{question}{}{}
+2. Let $\{x_n\}_{n=1}^{\infty}$ be a monotone increasing sequence such that 
+\[x_{n+1} - x_n \leq \frac{1}{n}.\]
+Determine whether the sequence converges. (If yes, prove it; if not, disprove it or give a counterexample.)
+\end{question}
+\begin{proof}
+No, consider $p$-series. The sequence $\set{x_n}_{n=1}^{\infty}$ defined by $x_i:=\sum_{j=1}^i \frac{1}{j}$ is monotone increasing, satisfying the desired property, and from our knowledge, diverge. 
+\end{proof}
+\begin{question}{}{}
+Let $M_{n \times m}$ be the collection of all $n \times m$ matrices with real entries. Define a function $\| \cdot \|: M_{n \times m} \to \mathbb{R}$ by
+\[
+\| A \| = \sup \left\{ \frac{\|Ax\|_2}{\|x\|_2} : x \in \mathbb{R}^m, x \neq 0 \right\},
+\]
+where we recall that $\| \cdot \|_2$ is the 2-norm on Euclidean space given by
+\[
+\| Ax \|_2 = \left( \sum_{i=1}^{k} x_i^2 \right)^{1/2} \quad \text{if } x \in \mathbb{R}^k.
+\]
+Show that:
+\begin{enumerate}
+    \item $\| A \| = \sup \left\{ \|Ax\|_2 : x \in \mathbb{R}^m, \norm{x}_2 =1 \right\} = \inf \left\{ M \in \mathbb{R} : \|Ax\|_2 \leq M \|x\|_2 \, \forall x \in \mathbb{R}^m \right\}$.
+    \item $\| Ax \|_2 \leq \| A \| \| x \|_2$ for all $x \in \mathbb{R}^m$.
+    \item $\| \cdot \|$ defines a norm on $M_{n \times m}$.
+\end{enumerate}
+\end{question}
+\begin{proof}
+In this proof, we use $\abso{\cdot}$ to denote $\norm{\cdot}_2$, and if we write $x$ without specification, it belong to  $\R^m$\\
+
+We first show \vi{$\norm{A}= \sup \set{ \abso{Ax}: \abso{x}=1}$}\\
+
+\As{$\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0}=\norm{A}>  \sup \set{\abso{Ax} : \abso{x}=1} $}.Then we know $ \sup \set{\abso{Ax}:\abso{x}=1} $ is not an upper bound of $ \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0} $, so we know there exists $x\in \R^m$ such that $\frac{\abso{Ax}}{\abso{x}}>\sup \set{\abso{Ay}:\abso{y}=1}$.\\
+
+Define $\hat{x}:=\frac{x}{\abso{x}}$. We have $\frac{\abso{Ax}}{\abso{x}}=\abso{\frac{Ax}{\abso{x}}}=\abso{A \hat{x}}\leq \sup \set{\abso{Ay}:\abso{y}=1}
+$, since $\abso{\hat{x}}=\abso{\frac{x}{\abso{x}}}=\frac{\abso{x}}{\abso{x}}=1\implies \abso{A \hat{x}}\in \set{\abso{Ay}:\abso{y}=1}$. This \CaC.\\
+
+\As{$\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0}=\norm{A}<\sup \set{\abso{Ax} : \abso{x}=1} $}. Then we know $\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0}$ is not an upper bound of $\sup \set{\abso{Ax}:\abso{x}=1}$, so we know there exists $\hat{x} \in \R^m:\abso{\hat{x}}=1$ such that $\abso{A \hat{x}}>\sup \set{\frac{\abso{Ay}}{\abso{y}}:y\neq 0}$.\\
+
+We see $\abso{A \hat{x}}>\sup \set{\frac{\abso{Ay}}{\abso{y}}:y\neq 0}\geq \frac{\abso{A \hat{x}}}{\abso{\hat{x}}}=\frac{\abso{A \hat{x}}}{1}=\abso{A \hat{x}}\tCaC \vdone$\\
+
+Observe $  \inf \left\{ M \in \mathbb{R} : \|Ax\|_2 \leq M \|x\|_2 \, \forall x \in \mathbb{R}^m \right\}= \inf \set{c \in \R: \forall x\neq 0, c\geq \frac{\abso{Ax}}{\abso{x}}}$, since $\forall M, \abso{A\vecta{0}}\leq M\abso{\vecta{0}}$.\\
+
+Observe that $   \set{c \in \R: \forall x\neq 0, c\geq \frac{\abso{Ax}}{\abso{x}}}$ is the set of upper bound of $\set{\frac{\abso{Ax}}{\abso{x}}:\abso{x}\neq 0}$, so $\inf   \set{c \in \R: \forall x, c\geq \frac{\abso{Ax}}{\abso{x}}}=\norm{A}=\sup \set{\frac{\abso{Ax}}{\abso{x}}:\abso{x}\neq 0}$.\\
+\end{proof}
+\begin{proof}
+In this proof, we use $\abso{\cdot}$ to denote $\norm{\cdot}_2$, and if we write $x$ without specification, it belong to  $\R^m$\\
+
+If $x=0$, then we trivially have  $\abso{Ax}=\abso{0}=0\leq \norm{A}\abso{x}=0$, so from now, we only have to consider $x\neq 0$.\\
+
+If $x\neq 0$, we have $\abso{Ax}\leq \norm{A}\abso{x}\iff \frac{\abso{Ax}}{\abso{x}}\leq \norm{A}=\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0}$, trivially true.
+\end{proof}
+\begin{proof}
+In this proof, we use $\abso{\cdot}$ to denote $\norm{\cdot}_2$, and if we write $x$ without specification, it belong to  $\R^m$\\
+
+For non-negativity, observe $\forall x\neq 0,\frac{\abso{Ax}}{\abso{x}}\geq 0 \implies \norm{A}=\sup \set{\frac{\abso{Ax}}{\abso{x}}:x \in \R^m, x\neq 0}\geq 0$.\\
+
+For definite-positive, observe $A=0\implies \forall x\neq 0, \frac{\abso{Ax}}{\abso{x}}=\frac{\abso{0}}{\abso{x}}=0\implies \norm{A}=0$. Also, if $A\neq 0$, we can pick a column, say $p$-th column, that contain non-zero entry. We see the vector $e\in \R^m$ where the only non-zero entry is the  $p$-th entry being $1$ satisfy $\abso{Ae}>0$, thus $\frac{\abso{Ae}}{\abso{e}}>0$. Because $e\neq 0$, we see $\norm{A}=\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\in\R^m,x\neq 0}\geq \frac{\abso{Ae}}{\abso{e}}>0$.\\
+
+For absolute-homogenity, let $c \in \R\text{ and }A\in M_{n\times m}$. We wish to prove \vi{$\norm{cA}=\sup \set{\frac{\abso{cAx}}{\abso{x}}:x\neq 0}=\abso{c}\sup \set{\frac{\abso{Ax}}{\abso{x}}:x\neq 0}=\abso{c}\norm{A}$}. Notice that $\frac{\abso{cAx}}{\abso{x}}=\frac{\abso{c}\abso{Ax}}{\abso{x}}$, so we only have to prove the more general statement : $c>0 \implies c \sup X= \sup \set{cx:x\in X}$. Notice that $\forall x \in X, c \sup X\geq cx$, so we have $c\sup X\geq \sup \set{cx:x\in X}$. If $c\sup X$ is not the smallest upper bound, we see there exists $cx$ such that $c\sup X<cx$, and we see $\sup X<x$, causing a contradiction, so we do have $c\sup X=\sup \set{cx:x\in X}\vdone$   \\
+
+For triangle-inequality, first observe $\frac{\abso{(A+B)x}}{\abso{x}}=\frac{\abso{Ax+Bx}}{\abso{x}}\leq \frac{\abso{Ax}+\abso{Bx}}{\abso{x}}=\frac{\abso{Ax}}{\abso{x}}+\frac{\abso{Bx}}{\abso{x}}$. \As{$\norm{A+B}>\norm{A}+\norm{B}$}.\\
+
+Because $\norm{A}+\norm{B}$ is not an upper bound of $\set{\frac{\abso{(A+B)x}}{\abso{x}}:x\neq 0}$, we know there exists $x'$ such that  $\frac{\abso{(A+B)x'}}{\abso{x'}}>\norm{A}+\norm{B}$. Further, by definition of $\norm{A},\norm{B}$, we have
+\begin{equation}
+\frac{\abso{(A+B)x'}}{\abso{x'}}>\frac{\abso{Ax'}}{\abso{x'}}+\frac{\abso{Bx'}}{\abso{x'}}\tCaC
+\end{equation}
+\end{proof}
+
+\begin{question}{}{}
+Suppose that \(S_1, S_2, \ldots, S_n\) are sets in \(\mathbb{R}\) and 
+\[ S = \bigcup_{i=1}^{n} S_i. \]
+Define \(B_i = \sup S_i\) for \(i = 1, \ldots, n\).
+
+\begin{enumerate}
+    \item Show that \(\sup S = \max\{B_1, B_2, \ldots, B_n\} \).
+    \item If \(S\) is the union of an infinite collection of \(S_i\), find the relation between \(\sup S\) and \(B_i\).
+\end{enumerate}
+\end{question}
+\begin{proof}
+Let $\sup S_j=B_j=\max \set{B_1,\dots, B_n}$. We first show \vi{$\sup S_j$ is an upper bound of $S$}.\\
+
+By definition, we have $\forall x\in S_j,x\leq \sup S_j$ and have $\forall i \neq j, \forall x \in S_i, x\leq \sup S_i\leq \sup S_j $, so we have $\forall x\in S, \exists k \in \set{1,\dots, n}, x \in S_k \implies x\leq \sup S_k\leq \sup S_j\vdone$\\
+
+We now show  \blue{$\sup S_j$ is the least upper bound of $S$}.\\
+
+\As{there exists an upper bound of $S$ smaller than $\sup S_j$}. Denote that upper bound $y$. Because $y$ is smaller than $\sup S_j$, we know $y$ is not an upper bound of $S_j$, so we know there is a number  $z \in S_j$ greater than $y$. Observe that the fact $y$ is an upper bound of $S$ implies  $y$ is greater than or equal to $z \in S_j\subseteq S\tCaC\bdone$
+\end{proof}
+\begin{proof}
+We have $\sup S=\sup \set{B_i}$
+\end{proof}
+\begin{question}{}{}
+Let \( A \) be a non-empty set of \( \mathbb{R} \) which is bounded below. Define the set \( -A \) by 
+\[ -A \equiv \{-x \in \mathbb{R} : x \in A\}. \]
+Prove that
+\[ \inf(A) = -\sup(-A). \]
+\end{question}
+\begin{proof}
+Observe $\forall x\in -A, \sup (-A)\geq  x\implies \forall a \in A, -\sup (-A)\leq  a$. So $-\sup (-A)$ is an lower bound of $A$. \As{$-\sup (-A)$ is not the greatest lower bound of $A$} (greatest lower bound exists because bounded below and completeness). Let $b>-\sup (-A)$ be another lower bound of $A$. We have $-b<\sup (-A)$, so we know $-b$ is not an upper bound of $-A$, then we know  $\exists x \in -A, -b<x$. Then we know $\exists a \in A, -b<-a$, which implies $\exists a \in A, b>a$, but $b$ is an lower bound of $A\tCaC$
+\end{proof}
+\begin{question}{}{}
+\begin{enumerate}
+    \item Let \( A, B \) be non-empty subsets of \( \mathbb{R} \). Define \( A+B \) as 
+    \[ A+B = \{ x+y : x \in A, y \in B \}. \]
+    Justify if the following statements are true or false by providing a proof for the true statements and giving a counter-example for the false ones.
+    \begin{enumerate}
+        \item \( \sup(A+B) = \sup A + \sup B \).
+        \item \( \inf(A+B) = \inf A + \inf B \).
+        \item \( \sup(A \cap B) \leq \min\{\sup A, \sup B\} \).
+        \item \( \sup(A \cap B) = \min\{\sup A, \sup B\} \).
+        \item \( \sup(A \cup B) \geq \max\{\sup A, \sup B\} \).
+        \item \( \sup(A \cup B) = \max\{\sup A, \sup B\} \).
+    \end{enumerate}
+\end{enumerate}
+\end{question}
+\begin{proof}
+We prove $\sup (A+B)=\sup A+\sup B$. For all $a+b \in A+B$, we by definition have $a\leq \sup A, b\leq \sup B$, so we have $a+b\leq \sup A+\sup B$. This prove $\sup A+\sup B$ is an upper bound of $A+B$. \As{there exists an upper bound $x$ of $A+B$ smaller than $\sup A+\sup B$}. We have $x-\sup B<\sup A$, so we know $x-\sup B$ is not an upper bound of $A$. Then we know  $\exists a'\in A, x-\sup B<a'$. This implies $x-a'< \sup B$, so we know $x-a'$ is not an upper bound of  $B$. Then we know there exists  $b' \in B$ such that $x-a'< b'$. This implies $x<a'+b' \in A+B\tCaC$ to $x$ is an upper bound of  $A+B$
+\end{proof}
+\begin{proof}
+We prove $\inf (A+B)= \inf A +\inf B$. For all $a+b \in A+B$, we by definition have $\inf A\leq a,\inf B\leq b$, so we have $\inf A+\inf B\leq a+b$. This prove $\inf A+ \inf B$ is an lower bound of $A+B$.  \As{there exists an lower bound $x$ of $A+B$ greater than $\inf A+\inf B$}. We have $x- \inf A > \inf B$, so we know $x - \inf A$ is not an lower bound of $B$. Then we know  $\exists b' \in B, x- \inf A > b'$. This implies $x-b'>\inf A$, so we know $x- b'$ is not an lower bound of $A$. Then we know  $\exists a' \in A, x-b'>a'$. So we know $x<a'+b' \in A+B\tCaC$ to $x$ is an lower bound of $A+B$ 
+\end{proof}
+\begin{proof}
+We prove $\sup (A\cap B)\leq \min \set{\sup A,\sup  B}$.\\
+
+WOLG, let $\sup A\leq \sup B$. By definition $x \in A\cap B \implies  x \in A \implies x\leq \sup A$, so we know $\sup A$ is an upper bound of $A\cap B$. This implies $\sup A\cap B\leq \sup (A\cap B)$ 
+\end{proof}
+\begin{proof}
+We show $\sup (A\cap B)= \min \set{\sup A,\sup B}$ is not always correct. Let $A=[0,2]$ and $B=[0,1]\cup [3,4]$. We have $\sup (A\cap B= [0,1])=1\neq \min{\set{\sup A=2,\sup B=4}}$
+\end{proof}
+\begin{proof}
+We prove $\sup (A\cup B)\geq \max \set{\sup A, \sup B}$.\\
+
+WOLG, let $\sup A\geq \sup B$. \As{$\sup A>\sup (A\cup B)$}. Let $x$ be a number between  $\sup A\text{ and }\sup (A\cup B)$ ($x$ exists since it can be  $\frac{\sup A+\sup (A\cup B)}{2}$). Because $\sup A>x$, by definition, we know there exists $a' \in A$ such that $a'>x$. Notice that $x> \sup (A\cup B)$ implies $x$ is an upper bound of $A \cup B$, so we know $\forall a \in A\subseteq A\cup B, a\leq x\tCaC$
+\end{proof}
+\begin{proof}
+We prove $\sup (A\cup B)=\max \set{\sup A,\sup B}$. WOLG, let $\sup A\geq \sup B$. \As{$\sup B\leq \sup A<\sup (A\cup B)$}. Let $x$ be a number between  $\sup A\text{ and }\sup A\cup B(x\text{ exists since it can be $\frac{\sup A+\sup (A\cup B)}{2}$ })$. Because $x<\sup (A\cup B)$, we know $x$ is not an upper bound of  $A\cup B$. By definition, we know there exists $z\in A\cup B$ such that $x<z$. We know either $z \in A$ or $z \in B$, but we see $z \in A\implies z\leq \sup A<x$ and we see $z \in B\implies z\leq \sup B\leq \sup A<x\tCaC$
+\end{proof}
+\begin{question}{}{}
+\begin{enumerate}
+    \setcounter{enumi}{6}
+    \item Let \( S \subseteq \mathbb{R} \) be bounded below and non-empty. Show that
+    \[ \inf S = \sup\{ x \in \mathbb{R} : x \text{ is a lower bound for } S \}. \]
+\end{enumerate}
+\end{question}
+\begin{proof}
+Denote $B=\set{x\in R: x\text{ is a lower bound for $S$ }}$. \As{$\inf S> \sup B$}. Let $\inf S>x>\sup B$. Notice $\inf S>x$ implies there is a lower bound  $b$ of  $S$ greater than  $x$. Observe $b>x\text{ and }b \in B\implies x$ is not an upper bound of $B\tCaC x>\sup B$.\\
+
+\As{$\inf S<\sup B$}. Let $\inf S<x<\sup B$. Notice $\inf S<x$ implies there exists $s' \in S$ such that $s'<x$, and notice $x> \sup B$ implies there exists $b'\in B$ such that $b'>x$. We see  $b'>x>s'$ while  $b'$ is an lower bound of  $S\tCaC$
+\end{proof}
+\begin{question}{}{}
+8. Let \( f \) be a continuous function on \( \mathbb{R} \) and \( D \) is a dense subset in \( \mathbb{R} \). Prove that:
+\begin{enumerate}
+    \item \( \sup_{x \in D} f(x) = \sup_{x \in \mathbb{R}} f(x) \).
+    \item There exists a sequence \( \{x_n\}_{n=1}^{\infty} \) in \( D \) such that 
+    \[
+    \lim_{n \to \infty} f(x_n) = \sup_{x \in \mathbb{R}} f(x).
+    \]
+\end{enumerate}
+\end{question}
+\begin{proof}
+Because $D\subseteq \R$, we must have $\sup \set{f(x): x\in D}\leq \sup \set{f(x): x\in \R}$, since any upper bound of the latter will be one of the former.\\
+
+\As{$\sup \set{f(x):x \in D}<\sup \set{f(x):x\in \R}$}. Because $\sup \set{f(x):x\in D}$ is not an upper bound of $\set{f(x):x\in \R}$, we know there exists $x'\in \R$ such that 
+\begin{equation}
+f(x')>\sup \set{f(x):x\in D}
+\end{equation}
+Let $\set{f(x_i)}_{i=1}^\infty$ be a sequence where $\forall i, x_i \in D$ and $j>i\implies \abso{x_j-x'}<\abso{x_i-x'}$ and $\lim_{i \to \infty}x_i=x'$. Such sequence exists because $D$ is dense in $\R$. We now show 
+\begin{equation}
+\lim_{i\to\infty}f(x_i)=f(x')
+\end{equation}
+Notice that $f$ is continuous meaning
+\begin{equation}
+  \forall \epsilon ,\exists \delta, \forall u\in \R, \abso{u-x'}<\delta\implies \abso{f(u)-f(x')}<\epsilon  
+\end{equation}
+So for all 
+\end{proof}
 \end{document}
