--- a/Probability/macros.tex
+++ b/Probability/macros.tex
@@ -33,3 +33,4 @@
 \newcommand{\myref}[2]{\hyperref[#2]{#1\ \ref*{#2}}}
 \newcommand{\power}[1]{\mathcal{P}(#1)}
 \newcommand{\cc}{\mathcal{C}}
+\newcommand{\var}{\text{Var}}
