--- a/Probability/preamble.tex
+++ b/Probability/preamble.tex
@@ -1,3 +1,4 @@
+
 %%%%%%%%%%%%%% macros.tex %%%%%%%%%%%%%%
 % Place your custom macros here, if any.
 
@@ -14,6 +15,7 @@
 
 % Page Setup
 \usepackage[letterpaper, tmargin=2cm, rmargin=0.5in, lmargin=0.5in, bmargin=80pt, footskip=.2in]{geometry}
+\usepackage{adjustbox}
 
 % Mathematics
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
