--- a/Advanced Calculus/macros.tex
+++ b/Advanced Calculus/macros.tex
@@ -3,13 +3,20 @@
 \newcommand{\red}[1]{\textcolor{red}{#1}}
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
 \newcommand{\vi}[1]{\textcolor{violet}{#1}}
+\newcommand{\olive}[1]{\textcolor{olive}{#1}}
 \newcommand{\teal}[1]{\textcolor{teal}{#1}}
+\newcommand{\brown}[1]{\textcolor{brown}{#1}}
+\newcommand{\orange}[1]{\textcolor{orange}{#1}}
+
 \newcommand{\tCaC}{\text{ \CaC }}
 \newcommand{\CaC}{\red{CaC} }
 \newcommand{\As}[1]{Assume \red{#1}}
 \newcommand{\vdone}{\vi{\text{ (done) }}}
 \newcommand{\bdone}{\blue{\text{ (done) }}}
 \newcommand{\tdone}{\teal{\text{ (done) }}}
+\newcommand{\odone}{\olive{\text{ (done) }}}
+\newcommand{\bodone}{\brown{\text{ (done) }}}
+\newcommand{\ordone}{\orange{\text{ (done) }}}
 \newcommand{\ld}{\lambda}
 \newcommand{\vecta}[1]{\textbf{#1}}
 \newcommand{\set}[1]{\{ #1 \}}
