--- a/Advanced Calculus/preamble.tex
+++ b/Advanced Calculus/preamble.tex
@@ -32,16 +32,18 @@
 \definecolor{myb}{RGB}{45, 111, 177}
 \definecolor{myr}{RGB}{199, 68, 64}
 % Define more colors here...
-
+\definecolor{olive}{HTML}{6B8E23}
+\definecolor{orange}{HTML}{CC5500}
+\definecolor{brown}{HTML}{8B4513}
 % Hyperlinks
 \usepackage{bookmark}
 \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=blue,anchorcolor=blue]{hyperref}
 % \usepackage{hyperref}
 % \hypersetup{
-    pdftitle={Assignment},
-    colorlinks=true, linkcolor=doc!90,
-    bookmarksnumbered=true,
-    bookmarksopen=true
+%    pdftitle={Assignment},
+ %   colorlinks=true, linkcolor=doc!90,
+%    bookmarksnumbered=true,
+%    bookmarksopen=true
 %}
 
 % Figures and Graphics
@@ -200,7 +202,7 @@
 {\addvspace{30pt}%
 	\begin{tikzpicture}[remember picture, overlay]%
 		\draw[fill=doc!60,draw=doc!60] (-7,-.1) rectangle (-0.9,.5);%
-		\pgftext[left,x=-4.5cm,y=0.2cm]{\color{white}\Large\sc\bfseries Chapter\ \thecontentslabel};%
+		\pgftext[left,x=-5.5cm,y=0.2cm]{\color{white}\Large\sc\bfseries Chapter\ \thecontentslabel};%
 	\end{tikzpicture}\color{doc!60}\large\sc\bfseries}%
 {}
 {}
